[gd_scene load_steps=52 format=2]

[ext_resource path="res://Assets/Boxer_Red/Idle/Gloves/Boxer_Red_Glove_Idle_Back3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Boxer_Red/Idle/Gloves/Boxer_Red_Glove_Idle_Front1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/Boxer_Red/Idle/Gloves/Boxer_Red_Glove_Idle_Front3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Boxer_Red/Idle/Gloves/Boxer_Red_Glove_Idle_Front2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Front6.png" type="Texture" id=6]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Front7.png" type="Texture" id=7]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Front8.png" type="Texture" id=8]
[ext_resource path="res://Assets/Boxer_Red/Running/Body/Boxer_Red_Running_Body3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Boxer_Red/Running/Body/Boxer_Red_Running_Body5.png" type="Texture" id=10]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Front1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Boxer_Red/Running/Body/Boxer_Red_Running_Body6.png" type="Texture" id=12]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Back2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Boxer_Red/Idle/Gloves/Boxer_Red_Glove_Idle_Back2.png" type="Texture" id=14]
[ext_resource path="res://Assets/Boxer_Red/Idle/Gloves/Boxer_Red_Glove_Idle_Front4.png" type="Texture" id=15]
[ext_resource path="res://Assets/Boxer_Red/Idle/Gloves/Boxer_Red_Glove_Idle_Back1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Boxer_Red/Idle/Gloves/Boxer_Red_Glove_Idle_Back4.png" type="Texture" id=17]
[ext_resource path="res://Assets/Boxer_Red/Idle/Body/Boxer_Red_Body3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Boxer_Red/Idle/Body/Boxer_Red_Body4.png" type="Texture" id=19]
[ext_resource path="res://Assets/Boxer_Red/Idle/Body/Boxer_Red_Body1.png" type="Texture" id=20]
[ext_resource path="res://Assets/Boxer_Red/Idle/Body/Boxer_Red_Body2.png" type="Texture" id=21]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Back3.png" type="Texture" id=22]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Back7.png" type="Texture" id=23]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Front2.png" type="Texture" id=24]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Front3.png" type="Texture" id=25]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Front4.png" type="Texture" id=26]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Front5.png" type="Texture" id=27]
[ext_resource path="res://Assets/Boxer_Red/Running/Body/Boxer_Red_Running_Body7.png" type="Texture" id=28]
[ext_resource path="res://Assets/Boxer_Red/Running/Body/Boxer_Red_Running_Body1.png" type="Texture" id=29]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Back5.png" type="Texture" id=30]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Back1.png" type="Texture" id=31]
[ext_resource path="res://Assets/Boxer_Red/Running/Body/Boxer_Red_Running_Body8.png" type="Texture" id=32]
[ext_resource path="res://Assets/Boxer_Red/Running/Body/Boxer_Red_Running_Body2.png" type="Texture" id=33]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Back6.png" type="Texture" id=34]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Back4.png" type="Texture" id=35]
[ext_resource path="res://Assets/Boxer_Red/Running/Gloves/Boxer_Red_Glove_Running_Back8.png" type="Texture" id=36]
[ext_resource path="res://Assets/Boxer_Red/Running/Body/Boxer_Red_Running_Body4.png" type="Texture" id=37]
[ext_resource path="res://Scenes/Glove_Jab.tscn" type="PackedScene" id=38]
[ext_resource path="res://Scenes/Hook.tscn" type="PackedScene" id=39]
[ext_resource path="res://Audio/ugh.mp3" type="AudioStream" id=40]
[ext_resource path="res://Scenes/RandomJabSFXPlayer.gd" type="Script" id=41]
[ext_resource path="res://Audio/Jabs/Jab2.wav" type="AudioStream" id=42]
[ext_resource path="res://Audio/Jabs/Jab3.wav" type="AudioStream" id=43]
[ext_resource path="res://Audio/Jabs/Jab.wav" type="AudioStream" id=44]
[ext_resource path="res://Audio/Jabs/Jab1.wav" type="AudioStream" id=45]
[ext_resource path="res://Audio/Jabs/Jab4.wav" type="AudioStream" id=46]
[ext_resource path="res://Scenes/Glove_Front.tscn" type="PackedScene" id=47]
[ext_resource path="res://Scenes/Glove_Back.tscn" type="PackedScene" id=48]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 14 ), ExtResource( 1 ), ExtResource( 17 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 13 ), ExtResource( 22 ), ExtResource( 35 ), ExtResource( 30 ), ExtResource( 34 ), ExtResource( 23 ), ExtResource( 36 ) ],
"loop": true,
"name": "Running",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 15 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Running",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 33 ), ExtResource( 9 ), ExtResource( 37 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 28 ), ExtResource( 32 ) ],
"loop": true,
"name": "Running",
"speed": 10.0
} ]

[node name="Player" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )
jab_scene = ExtResource( 38 )
hook_scene = ExtResource( 39 )

[node name="Gloves" type="Node2D" parent="."]
position = Vector2( -5, 0 )

[node name="Glove_Back3" type="AnimatedSprite" parent="Gloves"]
visible = false
position = Vector2( 12, 0 )
frames = SubResource( 2 )
animation = "Idle"
frame = 3
playing = true

[node name="Glove_Back" parent="Gloves" instance=ExtResource( 48 )]

[node name="Glove_Front3" type="AnimatedSprite" parent="Gloves"]
visible = false
position = Vector2( 12, 0 )
scale = Vector2( 0.984145, 0.985034 )
z_index = 1
frames = SubResource( 3 )
animation = "Idle"
playing = true

[node name="Glove_Front" parent="Gloves" instance=ExtResource( 47 )]

[node name="Glovespawn" type="Position2D" parent="Gloves"]
position = Vector2( 15, 0 )

[node name="Body" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
frame = 2
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 1 )
polygon = PoolVector2Array( -12, -8, -12, -21, -7, -26, 2, -26, 6, -22, 6, -8, 10, -1, 10, 25, -22, 25, -22, 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="JabTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="HookTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
position = Vector2( 1, 1 )
scale = Vector2( 1.2, 1.1 )
polygon = PoolVector2Array( -12, -8, -12, -21, -7, -26, 2, -26, 6, -22, 6, -8, 10, -1, 10, 25, -22, 25, -22, 3 )

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 40 )
bus = "Effects"

[node name="RandomJabSFXPlayer" type="AudioStreamPlayer2D" parent="."]
script = ExtResource( 41 )
audio_files = [ ExtResource( 45 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 46 ), ExtResource( 44 ) ]

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
